# codex

./: README.md
codex-cli/: Dockerfile
codex-cli/scripts/: build_container.sh  install_native_deps.py
codex-rs/app-server/: Cargo.toml
codex-rs/arg0/: Cargo.toml
codex-rs/arg0/src/: lib.rs
codex-rs/cli/: Cargo.toml
docs/: advanced.md
ext/: README.md
ext/app-server-protocol-export/: ApplyPatchApprovalParams.json  AuthMode.ts  ClientRequest.json  ClientRequest.ts  CommandExecutionRequestApprovalParams.json  CommandExecutionRequestApprovalResponse.json  ConversationId.ts  EventMsg.json  EventMsg.ts  ExecCommandApprovalParams.json  FileChangeRequestApprovalResponse.json  SandboxCommandAssessment.ts  SandboxRiskLevel.ts  ServerNotification.json  ServerNotification.ts  ServerRequest.json  TaskCompleteEvent.ts  TaskStartedEvent.ts  ToolRequestUserInputParams.json  codex_app_server_protocol.schemas.json  index.ts
ext/app-server-protocol-export/v1/: AddConversationListenerParams.json  ArchiveConversationParams.json  (+15 more)
ext/examples/: Dockerfile  app-server-auth.js  app-server-proxy.js  build_image.sh  hello-app-server.js  hello-sdk-proxy.js  paste-image-client.js  paste-image-sdk-proxy.js  reasoning-client.js  reasoning-sdk-proxy.js  resume-client.js  sdk-proxy-client.js  sdk-proxy-ping.js  sdk-proxy-transport.js  slash-commands-sdk-proxy.js  slash-commands.js
ext/examples/helloworld/rust/: Cargo.toml  build.rs
ext/grpc/: Cargo.toml  README.md  build.rs
ext/grpc/proto/: codex.proto
scripts/browser-login/: README.md  callback.php  index.php
(+105 files in other folders)
