[package]
name = "codex-grpc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
prost = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util", "net", "signal", "sync"] }
tokio-stream = { version = "0.1", features = ["net"] }
tokio-util = { version = "0.7", features = ["sync"] }
tonic = { version = "0.13", features = ["transport"] }

[build-dependencies]
tonic-build = "0.13"
