[package]
name = "codex-helloworld"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.12"
tonic = { version = "0.11", features = ["transport"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time"] }
tokio-stream = { version = "0.1.17", features = ["net"] }

tower = { version = "0.4", features = ["util"] }

[build-dependencies]
tonic-build = "0.11"
